# LLM_WatchDog

./: .gitignore  CHANGELOG.md  README.md  all_calls.csv  pyproject.toml  requirements.txt  template.py
.github/workflows/: publish.yml  test.yml
src/infertrack/: __init__.py  config.py  exceptions.py  scratch_stream.py
src/infertrack/cli/: __main__.py  commands.py  export.py
src/infertrack/core/: budget.py  context.py  decorator.py  interceptor.py  retry.py  streaming.py
src/infertrack/pricing/: prices.json  table.py
src/infertrack/providers/: anthropic.py  base.py  openai.py
src/infertrack/storage/: db.py  models.py
src/llm_ledger/: __init__.py  config.py  exceptions.py
src/llm_ledger/cli/: __main__.py  commands.py  export.py
src/llm_ledger/core/: budget.py  context.py  decorator.py  interceptor.py
src/llm_ledger/pricing/: table.py
src/llm_ledger/providers/: base.py  openai.py
src/llm_ledger/storage/: db.py  models.py
src/llm_meter/: __init__.py  config.py  exceptions.py
src/llm_meter/cli/: __main__.py  commands.py
src/llm_meter/core/: budget.py  context.py  decorator.py  retry.py
src/llm_meter/pricing/: table.py
src/llm_meter/providers/: anthropic.py  base.py  openai.py
src/llm_meter/storage/: db.py  models.py
src/llm_watchdog/: __init__.py  config.py  exceptions.py
src/llm_watchdog/cli/: __main__.py  commands.py
src/llm_watchdog/core/: budget.py
src/llm_watchdog/storage/: db.py  models.py
tests/: conftest.py
tests/unit/: test_budget.py  test_cli.py  test_context.py  test_coverage_gaps.py  test_decorator.py  test_export.py  test_interceptor.py  test_placeholder.py  test_providers.py  test_providers_anthropic.py  test_retry.py  test_storage.py  test_streaming.py
