[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-meter"
version = "0.1.0"
description = "Zero-config LLM call interceptor: cost, latency, budget enforcement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "ollama", "openai", "cost", "monitoring", "tokens", "budget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "openai>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff", "mypy", "build", "twine"]

[project.scripts]
watchdog = "llm_meter.cli.__main__:cli"

[project.urls]
Repository = "https://github.com/yourname/llm-meter"
"Bug Tracker" = "https://github.com/yourname/llm-meter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_meter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Ollama running locally",
    "slow: marks tests that are slow",
]
addopts = "-v --tb=short"
