[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-ledger"
version = "0.1.0"
description = "Zero-config LLM call interceptor: cost, latency, and budget enforcement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "openai", "ollama", "anthropic", "cost", "monitoring", "tokens", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "build",
    "twine",
]

[project.scripts]
watchdog = "llm_ledger.cli.__main__:cli"

[project.urls]
Repository = "https://github.com/yourname/llm-ledger"
"Bug Tracker" = "https://github.com/yourname/llm-ledger/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_ledger"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Ollama running locally (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true