[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infertrack"
version = "1.0.0"
description = "Zero-config LLM call interceptor: cost, latency, and budget enforcement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "openai", "ollama", "anthropic", "cost", "monitoring", "tokens", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "build",
    "twine",
]

[project.scripts]
watchdog = "infertrack.cli.__main__:cli"

[project.urls]
Repository = "https://github.com/yourname/infertrack"
"Bug Tracker" = "https://github.com/yourname/infertrack/issues"
Changelog = "https://github.com/yourname/infertrack/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/infertrack"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "src/infertrack/scratch_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Ollama running locally (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src/infertrack"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/scratch_*.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true